tests/sksl/errors/ComputeUniform.metal
### Compilation failed:

error: 1: 'uniform' is not permitted here
uniform int x;
^^^^^^^
1 error
